# ecs36c

assignment1/: Book.h  Makefile  SearchNewBooks  SearchNewBooks.cpp  author.txt  search.cpp  search.h  tests.cpp
assignment2/: Makefile  consistentresultverification.cxx  insertionsort.cpp  insertionsort.h  mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h  sortedverification.cxx  timealgorithms.cxx
assignment2/Program2Source/: insertionsort.cpp  insertionsort.h  mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h  sortedverification.cxx  timealgorithms.cxx
assignment3/: Makefile  buildheap.cxx  createteams.cxx  priorityqueue.h  teamdata.cpp  teamdata.h
assignment3/Autograder/: Makefile  buildheap.cxx  createteams.cxx  priorityqueue.cpp  teamdata.cpp  teamdata.h
binary_search/: binary_search_iterative.hpp
selection_sort/: CMakeLists.txt  selection_sort.hpp  selection_sort_test.cpp
